data/issues_nolabel/nolabel_test_4391.txt
bazel build error

Ubuntu16.04 Cuda8.0 cudnn4 gcc-5.4 g++5.4 tensorflow0.9.0,
i experienced the issue blow when using bazel build -c opt --config=cuda //tensorflow/tools/pip_package:build_pip_package  and there also is a warning.
what should i do to correct this? i am new to tensorflow .  Need Help
WARNING: /home/keithyin/workspace/tensorflow-0.9.0/util/python/BUILD:11:16: in includes attribute of cc_library rule //util/python:python_headers: 'python_include' resolves to 'util/python/python_include' not in 'third_party'. This will be an error in the future.
ERROR: /home/keithyin/workspace/tensorflow-0.9.0/tensorflow/stream_executor/BUILD:5:1: C++ compilation of rule '//tensorflow/stream_executor:stream_executor' failed: crosstool_wrapper_driver_is_not_gcc failed: error executing command third_party/gpus/crosstool/clang/bin/crosstool_wrapper_driver_is_not_gcc -U_FORTIFY_SOURCE '-D_FORTIFY_SOURCE=1' -fstack-protector -fPIE -Wall -Wunused-but-set-parameter -Wno-free-nonheap-object ... (remaining 100 argument(s) skipped): com.google.devtools.build.lib.shell.BadExitStatusException: Process exited with status 1.
tensorflow/stream_executor/cuda/cuda_blas.cc: In member function 'virtual bool perftools::gputools::cuda::CUDABlas::DoBlasGemm(perftools::gputools::Stream_, perftools::gputools::blas::Transpose, perftools::gputools::blas::Transpose, tensorflow::uint64, tensorflow::uint64, tensorflow::uint64, float, const perftools::gputools::DeviceMemoryEigen::half&, int, const perftools::gputools::DeviceMemoryEigen::half&, int, float, perftools::gputools::DeviceMemoryEigen::half_, int)':
tensorflow/stream_executor/cuda/cuda_blas.cc:1683:22: error: 'CUBLAS_DATA_HALF' was not declared in this scope
CUDAMemory(a), CUBLAS_DATA_HALF, lda,
^
tensorflow/stream_executor/cuda/cuda_blas.cc: In function 'cublasOperation_t perftools::gputools::cuda::{anonymous}::CUDABlasTranspose(perftools::gputools::blas::Transpose)':
tensorflow/stream_executor/cuda/cuda_blas.cc:406:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
tensorflow/stream_executor/cuda/cuda_blas.cc: In function 'cublasFillMode_t perftools::gputools::cuda::{anonymous}::CUDABlasUpperLower(perftools::gputools::blas::UpperLower)':
tensorflow/stream_executor/cuda/cuda_blas.cc:417:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
tensorflow/stream_executor/cuda/cuda_blas.cc: In function 'cublasDiagType_t perftools::gputools::cuda::{anonymous}::CUDABlasDiagonal(perftools::gputools::blas::Diagonal)':
tensorflow/stream_executor/cuda/cuda_blas.cc:428:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
tensorflow/stream_executor/cuda/cuda_blas.cc: In function 'cublasSideMode_t perftools::gputools::cuda::{anonymous}::CUDABlasSide(perftools::gputools::blas::Side)':
tensorflow/stream_executor/cuda/cuda_blas.cc:439:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
Target //tensorflow/tools/pip_package:build_pip_package failed to build
Use --verbose_failures to see the command lines of failed build steps.
INFO: Elapsed time: 5928.835s, Critical Path: 282.48s